--- a/CSS/HomeStyle.css
+++ b/CSS/HomeStyle.css
@@ -1288,6 +1288,18 @@ footer {
         padding: 6px;
     }
 
+    .box a{
+        border-radius: 5px;
+        color: #ffffff;
+        background-color: var(--button-color);
+        outline: none;
+        border: none;
+        font-size: 20px;
+        padding: 5px;
+        margin-left: 70px; 
+    }
+    
+
     .FestivalBooking{
         display: flex;
         position: relative;
@@ -1305,6 +1317,7 @@ footer {
         max-width: 1280px;
         max-height: 1500px;
         padding: 20px 60px;
+        display: grid;
     }
 
     .spill-text{
@@ -1368,7 +1381,7 @@ footer {
     .dots_spill{
         display: flex;
         position: relative;
-        margin-top: -54rem;
+        margin-top: -40rem;
     }
 
 
@@ -1440,6 +1453,51 @@ footer {
     
     .navbar{
         display: none;
+    }
+    
+    /* navbar dropdown */
+    .dropbtn {
+        background-color: #607e13;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .dropbtn:hover, .dropbtn:focus {
+        background-color: var(--button-color);
+    }
+    
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        right: 0;
+        z-index: 1;
+    }
+    
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    
+    .dropdown a:hover {
+        background-color: var(--button-color);
+    }
+    
+    .show {
+        display: block;
     }
     
     #menu-icon {
@@ -1693,6 +1751,8 @@ footer {
         height: 2rem;
         font-size: 1.4rem;
     }
+    
+    
 
     .FestivalBooking{
         display: flex;
@@ -1703,10 +1763,11 @@ footer {
     }
 
      /* === they spill the tea === */
-     .spill{
+    .spill{
         max-width: 1280px;
         max-height: 1500px;
         padding: 20px 60px;
+        display: grid;
     }
 
     .spill-text{
