--- a/CSS/ProductStyle.css
+++ b/CSS/ProductStyle.css
@@ -1,4 +1,3 @@
-/* Google Font */
 @import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@400;500;700&family=Poppins:ital,wght@0,200;0,300;0,500;0,600;1,700&display=swap');
 
 *{
@@ -12,7 +11,6 @@
     text-decoration: none;
 }
 
-/* Variables */
 :root{
     --main-color: #96AD39;
     --button-color:#D0862D;
@@ -49,6 +47,10 @@ header{
 
 .logo img{
     width: 90px;
+}
+
+.dropdown{
+    display: none;
 }
 
 .navbar {
@@ -103,55 +105,6 @@ header{
     background-size: auto;
 }
 
-/* .active_nav a:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -5rem;
-    height: 2px;
-    background-color: var(--button-color);
-} */
-
-#menu-icon {
-    color: var(--second-color);
-    font-size: 24px;
-    z-index: 100001;
-    cursor: pointer;
-    display: none;
-}
-
-/* DROPDOWN NAVBAR */
-.dropdown_menu {
-    display: none;
-    position: absolute;
-    right: 2rem;
-    top: 60px;
-    height: 0;
-    width: 15%;
-    background-color: var(--main-color);
-    border-radius: 10px;
-    overflow: hidden;
-    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    /* backdrop-filter: blur(15px); */
-}
-
-.dropdown_menu.open {
-    height: 240px;
-}
-
-.dropdown_menu li {
-    padding: 0.7rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.dropdown_menu a {
-    color: #FFFFFF;
-}
-
-/* NavBar END */
 
 
 /* Section Description "What is TeavoU?" START */
@@ -191,12 +144,10 @@ header{
     margin-top: 20px;
 }
 
-/* GRID */
 .grid{
     display: flex; 
     gap: 7px;  
     float: right;
-    /* background-color: #000000; */
 }
 
 .column{
@@ -260,7 +211,6 @@ header{
 .read{
     display: flex;
     justify-content: center;
-    /* margin-top: 58px; */
     background: #ffffff;
     width: 100%;
     align-items: center;
@@ -290,7 +240,6 @@ header{
 .buttons{
     display: flex;
     justify-content: center;
-    /* margin-top: 58px; */
     background: #ffffff;
     width: 100%;
     align-items: center;
@@ -852,6 +801,10 @@ footer {
 
 /* RESPONSIVE MOBILE */
 @media only screen and (max-width: 767px){
+    section{
+        max-width: 768px;
+    }
+
     header {
         position: fixed;
         width: 100%;
@@ -870,15 +823,49 @@ footer {
         display: none;
     }
     
-    #menu-icon {
-        color: var(--second-color);
+    .dropbtn {
+        background-color: #607e13;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
         cursor: pointer;
-        display: flex;
-        margin: 0 0 0 29rem;
-        padding: 0;
-        flex-grow: 1;
-        height: 20px;
-    }
+        }
+        
+        .dropbtn:hover, .dropbtn:focus {
+        background-color: var(--button-color);
+        }
+        
+        .dropdown {
+        position: relative;
+        display: inline-block;
+        }
+        
+        .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        right: 0;
+        z-index: 1;
+        }
+        
+        .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        }
+        
+        .dropdown a:hover {
+            background-color: var(--button-color);
+        }
+        
+        .show {
+            display: block;
+        }
     
     .logo{
         bottom: 20rem;
@@ -1026,15 +1013,49 @@ footer {
         display: none;
     }
     
-    #menu-icon {
-        color: var(--second-color);
+    .dropbtn {
+        background-color: #607e13;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
         cursor: pointer;
-        display: flex;
-        margin: 0 0 0 29rem;
-        padding: 0;
-        flex-grow: 1;
-        height: 20px;
-    }
+        }
+        
+        .dropbtn:hover, .dropbtn:focus {
+        background-color: var(--button-color);
+        }
+        
+        .dropdown {
+        position: relative;
+        display: inline-block;
+        }
+        
+        .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        right: 0;
+        z-index: 1;
+        }
+        
+        .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        }
+        
+        .dropdown a:hover {
+            background-color: var(--button-color);
+        }
+        
+        .show {
+            display: block;
+        }
     
     .logo{
         bottom: 20rem;
