--- a/CSS/ProductStyle.css
+++ b/CSS/ProductStyle.css
@@ -933,7 +933,7 @@ footer {
         position: sticky;
         text-align: center;
         padding: 0 20px;
-        margin-top: 30px;
+        margin-top: 30%;
     }
 
     .product-text h2 {      
