--- a/CSS/feedback.css
+++ b/CSS/feedback.css
@@ -21,15 +21,20 @@
 section{
     padding: 50px 30px 50px 100px;
 }
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    margin: 0;
+    margin: 0 0 20px;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: auto;
+    background-image: url(https://e1.pxfuel.com/desktop-wallpaper/1021/922/desktop-wallpaper-tea-leaf-tea-leaves-green-leaf.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
 }
 
 header {
@@ -106,17 +111,29 @@ header {
     background-size: auto;
 }
 
+#FromFeed {
+    margin-top: 90px;
+}
+
 #feedback-form {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     background: rgba(72, 188, 75, 0.5);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-image: url();
 }
 
-#feedback-form h2{
-    color: #e78d07;
+.head-form h2{
+    color: #ffffff;
+    text-align: center;
+    margin: -20px 0 10px;
+}
+
+.head-form img{
+    margin: auto;
+    display: block;
+    width: 40%;
+    height: auto;
 }
 
 label {
@@ -150,6 +167,7 @@ button:hover {
     background-color: #b76706;
 }
 
+/* RESPONSIVE MOBILE */
 @media only screen and (max-width: 768px) {
     section{
         max-width: 768px;
@@ -167,6 +185,10 @@ button:hover {
         align-items: center;
         padding: 35px 0.9rem;
         background-color: #ffffff;
+    }
+
+    #feedback-form {
+        margin: 20px ;
     }
 
     .navbar{
@@ -215,6 +237,85 @@ button:hover {
         .show {
             display: block;
         }
+}
+
+/* RESPONSIVE TABLET */
+@media (min-width: 768px) and (max-width: 1024px) {
+    section{
+        max-width: 1024px;
+    }
+
+    header {
+        position: fixed;
+        width: 100%;
+        height: 40px;
+        top: 0;
+        right: 0;
+        z-index: 1000;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 35px 0.9rem;
+        background-color: #ffffff;
+    }
+
+    #FromFeed {
+        margin: 90px 0 120px;
+    }
+
+    .formcard {
+        margin: 0;
+        padding: 0;
+    }
+
+    #feedback-form {
+        margin: 20px ;
+    }
+
+    .navbar{
+        display: none;
+    }
+    .dropbtn {
+        background-color: #607e13;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
         }
-
-
+        
+        .dropbtn:hover, .dropbtn:focus {
+        background-color: var(--button-color);
+        }
+        
+        .dropdown {
+        position: relative;
+        display: inline-block;
+        }
+        
+        .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        right: 0;
+        z-index: 1;
+        }
+        
+        .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        }
+        
+        .dropdown a:hover {
+            background-color: var(--button-color);
+        }
+        
+        .show {
+            display: block;
+        }
+}
