--- a/CSS/feedback.css
+++ b/CSS/feedback.css
@@ -195,14 +195,13 @@ button:hover {
         display: none;
     }
     .dropbtn {
-        background-color: #607e13;
-        color: white;
+        background-color: #FFFF;
         padding: 16px;
         font-size: 16px;
         border: none;
         cursor: pointer;
         }
-        
+
         .dropbtn:hover, .dropbtn:focus {
         background-color: var(--button-color);
         }
@@ -276,14 +275,13 @@ button:hover {
         display: none;
     }
     .dropbtn {
-        background-color: #607e13;
-        color: white;
+        background-color: #FFFF;
         padding: 16px;
         font-size: 16px;
         border: none;
         cursor: pointer;
         }
-        
+                
         .dropbtn:hover, .dropbtn:focus {
         background-color: var(--button-color);
         }
