--- a/CSS/AboutUsStyle.css
+++ b/CSS/AboutUsStyle.css
@@ -721,8 +721,7 @@ footer {
         flex: 100%;
         }
 .dropbtn {
-background-color: #607e13;
-color: white;
+background-color: #FFFF;
 padding: 16px;
 font-size: 16px;
 border: none;
