--- a/CSS/historystyle.css
+++ b/CSS/historystyle.css
@@ -1,4 +1,3 @@
-/* Google Font */
 @import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@400;500;700&family=Poppins:ital,wght@0,200;0,300;0,500;0,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
@@ -19,7 +18,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 2px;
 }
 
-/* Variables */
 :root{
   --main-color: #96AD39;
   --button-color:#D0862D;
@@ -109,28 +107,6 @@ header{
   background-size: auto;
 }
 
-/* .active_nav a:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: -5rem;
-  height: 2px;
-  background-color: var(--button-color);
-} */
-
-#menu-icon {
-  color: var(--second-color);
-  font-size: 24px;
-  z-index: 100001;
-  cursor: pointer;
-  display: none;
-}
-/* NavBar END */
-
-
-/*-----BG Section Styling-----
-----------------*/
 .bg-sections {
   padding-top : 0;
   padding-left : 0;
@@ -177,10 +153,6 @@ header{
   color: var(--bg-color);
   transition: 0.2 all linear;
 }
-  /* bg Sections Styling */
-
-  
-/* Features Sections Styling */
 .features-sections {
   max-width: 1280px;
   display: flex;
@@ -202,21 +174,6 @@ header{
     line-height: 125%;
     }
     
-  /* h2 {
-    width: 1212px;
-    height: 10px;
-    flex-shrink: 0;
-  }
-
-  h2 {
-    color: #4A6409;
-    text-align: center;
-    font-family: Grandstander;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 40px; /* 125% */
-    
   p {
     color: #FFF;
     text-align: justify;
@@ -224,7 +181,7 @@ header{
     font-size: 16px;
     font-style: light;
     font-weight: 500;
-    line-height: 33px; /* 165% */
+    line-height: 33px; 
   }
 
   h5 {
@@ -234,7 +191,7 @@ header{
     font-size: 38px;
     font-style: normal;
     font-weight: 700;
-    line-height: 46px; /* 115% */
+    line-height: 46px; 
   }
 
   h6 {
@@ -243,7 +200,7 @@ header{
     font-size: 28px;
     font-style: normal;
     font-weight: 600;
-    line-height: 33px; /* 117.857% */
+    line-height: 33px; 
   }
 
   h7 {
@@ -253,19 +210,16 @@ header{
     font-size: 16px;
     font-style: light;
     font-weight: 500;
-    line-height: 33px; /* 165% */
-    
+    line-height: 33px; 
 
-/* Desc1-20-Regular */
 font-family: Inter;
 font-size: 18px;
 font-style: normal;
 font-weight: 400;
-line-height: 33px; /* 165% */
+line-height: 33px; 
   }
 
 
-   /* History1 Sections Styling */
 
 .history-sections img {
   height: 85%;
@@ -296,17 +250,16 @@ line-height: 33px; /* 165% */
 }
 
 
-/* History2 Sections Styling */
-   .history2-sections img {
-    height: 85%;
-    width: 85%;
-    }
-    
-  .history2-sections__container img {
-   order: 2; /* Set the image to appear on the right */
-   }
+  .history2-sections img {
+  height: 85%;
+  width: 85%;
+  }
+  
+.history2-sections__container img {
+  order: 2; 
+  }
 
-   .history2-sections {
+  .history2-sections {
     display: inline-flex;
     padding: 44px 81px;
     flex-direction: column;
@@ -329,10 +282,6 @@ line-height: 33px; /* 165% */
     gap: 23px;
   }
   
-  /* History Sections Styling */
-
-
-  /* TeavoU Sections Styling */
 .teavou-sections {
     border-radius: 40px;
     background-color: #96AD39;
@@ -354,10 +303,6 @@ line-height: 33px; /* 165% */
     gap: 23px;
   }
 
-  /* TeavoU Sections Styling */
-
-
- /* FOOTER */
 footer {
   position: fixed;
   bottom: 0;
@@ -379,7 +324,6 @@ footer {
   vertical-align: top;
 }
 
-/* Navbar bawah */
 .line{
   background-color: #FFFFFF;
   height: 1px;
@@ -387,7 +331,6 @@ footer {
   margin-top: 35px;
 }
 
-/* copyright */
 #copyright {
   text-align: center;
   width: 100%;
@@ -449,7 +392,6 @@ footer {
   width: 35%;
 }
 
-/* penambahan */
 .footer-center .location,
 .footer-center .phone,
 .footer-center .mail {
@@ -473,7 +415,6 @@ footer {
 .footer .footer-center p span {
   color: var(--bg-color);
   display: block;
-  /* font-weight: normal; */
   font-size: 14px;
   line-height: 2;
 }
@@ -515,9 +456,6 @@ footer {
   }
 }
 
-/* ===================================== */
-/* Responsive Breakpoint Min Width 768px */
-/* ===================================== */
 @media only screen and (max-width: 768px) {
   section{
     max-width: 768px;
@@ -539,16 +477,14 @@ footer {
   .navbar{
       display: none;
   }
-  /* navbar dropdown */
   .dropbtn {
-      background-color: #607e13;
-      color: white;
-      padding: 16px;
-      font-size: 16px;
-      border: none;
-      cursor: pointer;
-  }
-  .dropbtn:hover, .dropbtn:focus {
+    background-color: #FFFF;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    }
+    .dropbtn:hover, .dropbtn:focus {
       background-color: var(--button-color);
   }
   .dropdown {
@@ -657,9 +593,6 @@ footer {
   }
 
   .history2-sections__container {
-    /* flex-direction: column;
-    padding: 80px 20px;
-    text-align: center; */
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
@@ -692,8 +625,6 @@ footer {
     font-size: 32px;
   }
 
-
-  /* buat JS */
   .hidden {
     opacity: 0;
     transition: opacity 1s ease-in-out;
