--- a/CSS/ProductStyle.css
+++ b/CSS/ProductStyle.css
@@ -1013,6 +1013,7 @@ footer {
 @media (max-height:800px) {
     footer {
         position: static;
+        display: flow-root;
     }
 
     header {
